--- a/Changes
+++ b/Changes
@@ -3,6 +3,10 @@ Release history for Config-INI-Tiny
 TODO keep_comments keep_empty keep_errors
 TODO unparse from_hash
 
+0.104 Mon 15 Nov 2021
+	- Correct parser output when `pairs` is enabled.
+	  Thanks to @djerius for the bug report
+
 0.103 Mon 25 Oct 2021
 	- Copyedited cookbook code examples
 	- No functional changes
